[package]
name = "tokenized-vaults-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenized_vaults_program"

[features]
default = []
devnet = ["raydium-clmm-cpi/devnet"]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata", "memo"] }
raydium-clmm-cpi = { git = "https://github.com/raydium-io/raydium-cpi", package = "raydium-clmm-cpi", branch = "anchor-0.31.1" } 
pyth-solana-receiver-sdk = "=0.6.1"
num-bigint = "0.4"
uint = { git = "https://github.com/raydium-io/parity-common", package = "uint" }


[dev-dependencies]
quickcheck = "1.0.3"
proptest = "1.0"
rand = "0.9.2"
